objects/monthly_Components__c.object
<CustomObject>
    <fields>
        <fullName>Component_Status__c</fullName>
        <label>Component Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Actual</fullName>
                </value>
                <value>
                    <fullName>Forecasted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Count_of_Rate_Hr__c</fullName>
        <label>Count of Rate/Hr</label>
        <summaryFilterItems>
            <field>Contractor_Information__c.Monthly_Rate__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Contractor_Information__c.Monthly_Component__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Decision_Streets_Project__c</fullName>
        <label>Decision Streets Project</label>
        <referenceTo>Decision_Streets_Project__c</referenceTo>
        <relationshipLabel>Monthly Components</relationshipLabel>
        <relationshipName>Monthly_Components</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Maintenance_Fee__c</fullName>
        <label>Maintenance Fee</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rate_Hr__c</fullName>
        <formula>Sum_of_Rate_Hr__c / Count_of_Rate_Hr__c</formula>
        <label>Rate/Hr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_of_Amount__c</fullName>
        <label>Sum of Amount</label>
        <summarizedField>Contractor_Information__c.Amount__c</summarizedField>
        <summaryForeignKey>Contractor_Information__c.Monthly_Component__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sum_of_Rate_Hr__c</fullName>
        <label>Sum of Rate/Hr</label>
        <summarizedField>Contractor_Information__c.Monthly_Rate__c</summarizedField>
        <summaryForeignKey>Contractor_Information__c.Monthly_Component__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Hours_Worked__c</fullName>
        <label>Total Hours Worked</label>
        <summarizedField>Contractor_Information__c.Hours_Worked__c</summarizedField>
        <summaryForeignKey>Contractor_Information__c.Monthly_Component__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Monthly_Billable__c</fullName>
        <formula>Sum_of_Amount__c +  Maintenance_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Monthly Billable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Monthly Component</label>
    <nameField>
        <displayFormat>MR - {0000}</displayFormat>
        <label>Monthly Components</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Monthly Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>